crates/figue/src/schema/snapshots/figue__schema__tests__snapshot_schema_counted_on_non_integer.snap
---
source: crates/figue/src/schema/tests.rs
expression: stripped
---
Error: field `value` marked as counted must be an integer
   ╭─[ <unknown>:4:5 ]
   │
 2 │ struct CountedOnNonInteger {
   │        ─────────┬─────────  
   │                 ╰─────────── defined at crates\figue\src\schema\tests.rs:96
   │ 
 4 │     value: bool,
   │     ─────┬─────  
   │          ╰─────── field `value` marked as counted must be an integer
 5 │ }
   │ ┬  
   │ ╰── end of definition
───╯
